commited whith script by pc ubunto_main

--- a/website/src/base/Footer/index.less
+++ b/website/src/base/Footer/index.less
@@ -123,6 +123,7 @@
         &__social-links {
             padding-top: 10px;
             >a {
+                color: @primary-color;
                 margin-right: 10px;
             }
         }
