--- a/website/src/styles/variables.less
+++ b/website/src/styles/variables.less
@@ -1,8 +1,9 @@
 
-@site-background: #ffffff;
+@site-background: black;
 
-@primary-color: #1178FF;
-@secondary-color: #d1d1d1;
+@primary-color: rgb(240, 212, 135);
+@secondary-color: #cac8c8;
+
 
 @site-max-width: 1200px;
 @header-size: 100px;
@@ -44,9 +45,9 @@
 
 @listing-service-list-service-bg: rgba(0,0,0,0.35);
 
-@banner-secondary-darken-bg-color: rgba(0,0,0,0.35);
+@banner-secondary-darken-bg-color: @secondary-color;
 @banner-secondary-text-shadow: rgba(0,0,0,0.25);
 
 @banner-sub-banner-bg: @site-background;
 @banner-sub-banner-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
-@banner-sub-banner-color: rgba(0, 0, 0, 0.8);
+@banner-sub-banner-color: @secondary-color;
