--- a/website/src/components/Banner/index.less
+++ b/website/src/components/Banner/index.less
@@ -3,6 +3,23 @@
 .banner {
   position: relative;
 
+  &__animation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 50%; 
+    height: 100%;
+    @media screen and (max-width: 1199px) {
+      &__orbit1 {
+        display: none;
+      }
+      &__orbit2 {
+       
+      }
+    }
+  }
+
   &__wrapper {
     width: 100%;
     max-width: @site-max-width;
@@ -99,7 +116,6 @@
     text-align: left;
     padding: 0 50px;
     width: 100%;
-    background-color: #777;
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
