commited whith script by pc ubunto_main

--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -20,7 +20,7 @@ hr {
 }
 
 .btn-primary {
-    background-color: #1178FF !important;
+    background-color: rgb(240, 212, 135) !important;
     border-color: transparent;
 }
 
