--- a/website/src/base/Cookies/index.less
+++ b/website/src/base/Cookies/index.less
@@ -1,3 +1,5 @@
+@import "../../styles/variables.less";
+
 .cookies {
     position: absolute;
     height: 100px;
@@ -20,6 +22,9 @@
             justify-content: space-between;
             p {
                 margin-bottom: 0;
+            }
+            a {
+                color: @primary-color;
             }
             @media only screen and (max-width: 768px) {
                 display: block;
