--- a/website/src/styles/variables.less
+++ b/website/src/styles/variables.less
@@ -1,9 +1,8 @@
 
-@site-background: black;
+@site-background: white;
 
 @primary-color: rgb(240, 212, 135);
 @secondary-color: #cac8c8;
-
 
 @site-max-width: 1200px;
 @header-size: 100px;
@@ -51,3 +50,4 @@
 @banner-sub-banner-bg: @site-background;
 @banner-sub-banner-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
 @banner-sub-banner-color: @secondary-color;
+
