commited whith script by pc ubunto_main

--- a/website/src/base/Footer/index.less
+++ b/website/src/base/Footer/index.less
@@ -122,6 +122,15 @@
 
         &__address {
             padding-top: 10px;
+            display: none;
+        }
+
+        &__phone {
+            display: none;
+        }
+
+        &__mail {
+            display: none;
         }
 
         &__social-links {
