--- a/website/src/pages/Satellite/index.less
+++ b/website/src/pages/Satellite/index.less
@@ -1,4 +1,8 @@
+@import '../../styles/variables.less';
+
 .page--satellite {
+    color: @primary-color;
+    max-width: @site-max-width;
+    margin: auto;
     text-align: center;
-    color: white;
 }
