--- a/website/src/components/Content/index.less
+++ b/website/src/components/Content/index.less
@@ -39,6 +39,10 @@
             font-weight: normal;
             letter-spacing: .01em;
         }
+
+        > div > h2 {
+            
+        }
         
         > div {
             font-size: 1.2em;
