--- a/website/src/base/Header/index.less
+++ b/website/src/base/Header/index.less
@@ -66,6 +66,11 @@
     }
 
     .menu-languages {
+
+        @media only screen and (max-width: @header-mobile-width) {
+            display: none;
+        }
+        
         line-height: @header-line-height !important;
         background-color: transparent;
         color: @header-menu-color;
