commited whith script by pc ubunto_main.

--- a/website/src/components/functionality/Create/Satellite/index.less
+++ b/website/src/components/functionality/Create/Satellite/index.less
@@ -1,6 +1,6 @@
 @import "../../../../styles/variables.less";
 
-.create-planet {
+.create-satellite {
   padding: 20px;
   background-color: @primary-color;
   border-radius: 8px;
