--- a/website/src/components/functionality/Delete/Satellite/index.less
+++ b/website/src/components/functionality/Delete/Satellite/index.less
@@ -1,6 +1,6 @@
 @import "../../../../styles/variables.less";
 
-.create-planet {
+.delete-satellite {
   padding: 20px;
   background-color: @primary-color;
   border-radius: 8px;
@@ -21,10 +21,6 @@
     display: block;
     font-size: 16px;
     margin-top: 15px;
-  }
-
-  .ant-select {
-    width: 50%;
   }
 
   .ant-input {
