--- a/website/src/components/functionality/Delete/Satellite/index.less
+++ b/website/src/components/functionality/Delete/Satellite/index.less
@@ -23,6 +23,10 @@
     margin-top: 15px;
   }
 
+  .ant-select {
+    width: 50%;
+  }
+
   .ant-input {
     background-color: white;
     border-radius: 4px;
