commited whith script by pc ubunto_main.

--- a/website/src/base/Header/index.less
+++ b/website/src/base/Header/index.less
@@ -71,7 +71,8 @@
             display: none;
         }
         
-        line-height: @header-line-height !important;
+        line-height: 195px!important;
+        margin-top: -34px;
         background-color: transparent;
         color: @header-menu-color;
         border-bottom: none;
@@ -96,7 +97,8 @@
 
     .menu {
         width: 100%;
-        line-height: @header-line-height !important;
+        line-height:20px !important;
+        margin-top: 55px;
                
         @media only screen and (max-width: @header-mobile-width) {
             display: none;
