commited whith script by pc ubunto_main.

--- a/website/src/base/Header/index.less
+++ b/website/src/base/Header/index.less
@@ -104,6 +104,14 @@
             display: none;
         }
 
+        .ant-menu-submenu {
+            color: black !important;
+        }
+
+        :where(.css-dev-only-do-not-override-1u6ojrz) a {
+            color: red;
+            text-decoration: none;
+          }
         ul {
             width: 100%;
             background-color: transparent;
