--- a/website/src/components/Tables/Satellite/index.less
+++ b/website/src/components/Tables/Satellite/index.less
@@ -1,6 +1,6 @@
 @import "../../../styles/variables.less";
 
-.celestial-body-table {
+.satellite-table {
   margin-top: 40px;  
   padding: 20px;
   background-color: @primary-color;
@@ -51,10 +51,15 @@
     box-shadow: 4px 8px rgba(0, 0, 0, 0.1);
   }
 
+  .next-button {
+    margin: 40px 10vw 0px  10vw;
+  }
+  
   .ant-btn {
     background-color: #b1aeae;
     border-radius: 10px;
-    margin: 40px 10vw 0px  10vw;
+    
     box-shadow: 4px 8px rgba(0, 0, 0, 0.1);
+    
   }
 }
